Add links to documenations

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,13 @@
       <h1>Try Groonga</h1>
     </header>
     <div id="terminal"></div>
+    <nav>
+      <h2>Documentations</h2>
+      <ul>
+        <li><a href="http://groonga.org/docs/tutorial.html">Tutorial</a></li>
+        <li><a href="http://groonga.org/docs/reference/command.html">Command reference</a></li>
+      </ul>
+    </nav>
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/jquery.terminal-0.8.7.min.js"></script>
     <script src="js/try-groonga.js"></script>
