--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,14 @@
         <li><a href="http://groonga.org/docs/tutorial.html">Tutorial</a></li>
         <li><a href="http://groonga.org/docs/reference/command.html">Command reference</a></li>
       </ul>
+      <h2>Help us!</h2>
+      <p>
+        We want to improve this application. Please help us!
+      </p>
+      <ul>
+        <li><a href="https://github.com/groonga/heroku-try-groonga">Source</a></li>
+        <li><a href="https://github.com/groonga/heroku-try-groonga#help-us">TODO items</a></li>
+      </ul>
     </nav>
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/jquery.terminal-0.8.7.min.js"></script>
