--- a/public/index.html
+++ b/public/index.html
@@ -2,34 +2,57 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Try Groonga</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <!-- Bootstrap -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <link href="css/jquery.terminal.css" rel="stylesheet">
     <link href="css/try-groonga.css" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <h1>Try Groonga</h1>
-    </header>
-    <div id="terminal"></div>
-    <nav>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">Try Groonga</a>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div id="terminal"></div>
+      <hr>
+      <nav>
       <h2>Documentations</h2>
       <ul>
-        <li><a href="http://groonga.org/docs/tutorial.html">Tutorial</a></li>
-        <li><a href="http://groonga.org/docs/reference/command.html">Command reference</a></li>
+        <p><a href="http://groonga.org/docs/tutorial.html" class="btn btn-primary btn-lg">Tutorial »</a></p>
+        <a href="http://groonga.org/docs/reference/command.html" class="btn btn-info btn-lg">Command reference »</a>
       </ul>
-      <h2>Help us!</h2>
-      <p>
-        We want to improve this application. Please help us!
-      </p>
-      <ul>
-        <li><a href="https://github.com/groonga/heroku-try-groonga">Source</a></li>
-        <li><a href="https://github.com/groonga/heroku-try-groonga#help-us">TODO items</a></li>
-      </ul>
-    </nav>
+      <div id="push"></div>
+    </div>
+
+    <div id="footer">
+      <div class="container-fluid">
+        <h3 class="text-muted">Help us!</h3>
+        <p class="text-muted">We want to improve this application. Please help us!</p>
+        <ul class="text-muted">
+          <li><a href="https://github.com/groonga/heroku-try-groonga">Source</a></li>
+          <li><a href="https://github.com/groonga/heroku-try-groonga#help-us">TODO items</a></li>
+        </ul>
+      </div>
+    </div>
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/jquery.terminal-0.8.7.min.js"></script>
     <script src="js/jquery.mousewheel-3.1.12.min.js"></script>
     <script src="js/try-groonga.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
