--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <![endif]-->
     <link href="css/jquery.terminal.css" rel="stylesheet">
     <link href="css/try-groonga.css" rel="stylesheet">
+    <!-- Datatable -->
+    <link href="//cdn.datatables.net/1.10.2/css/jquery.dataTables.css" rel="stylesheet">
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -29,6 +31,9 @@
     </div>
     <div class="container-fluid">
       <div id="terminal"></div>
+      <div>
+        <table id="datatable" class="table table-striped table-bordered"></table>
+      </div>
       <hr>
       <nav>
       <h2>Documentations</h2>
@@ -54,5 +59,6 @@
     <script src="js/jquery.mousewheel-3.1.12.min.js"></script>
     <script src="js/try-groonga.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="//cdn.datatables.net/1.10.2/js/jquery.dataTables.js"></script>
   </body>
 </html>
