--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,19 @@
     <div class="container-fluid">
       <div id="terminal"></div>
       <hr>
+      <div role="form">
+        <div class="form-group">
+          <label for="paste-area">paste area</label>
+          <textarea class="form-control" id="paste-area"></textarea>
+        </div>
+        <div class="checkbox">
+          <label class="checkbox-inline">
+            <input type="checkbox" id="paste-alert">alert response</input>
+          </label>
+        </div>
+        <input type="button" class="btn btn-default" id="paste-submit" value="submit" />
+      </div>
+      <hr>
       <nav>
       <h2>Documentations</h2>
       <ul>
