Use textarea instead of alert to show response

--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,11 @@
           <label for="paste-area">paste area</label>
           <textarea class="form-control" id="paste-area"></textarea>
         </div>
-        <div class="checkbox">
-          <label class="checkbox-inline">
-            <input type="checkbox" id="paste-alert">alert response</input>
-          </label>
-        </div>
         <input type="button" class="btn btn-default" id="paste-submit" value="submit" />
+        <div class="form-group">
+          <label for="paste-response">response</label>
+          <textarea class="form-control" id="paste-response" readonly></textarea>
+        </div>
       </div>
       <hr>
       <nav>
