Arrange textareas in a row on large display

--- a/public/index.html
+++ b/public/index.html
@@ -30,15 +30,19 @@
     <div class="container-fluid">
       <div id="terminal"></div>
       <hr>
-      <div role="form">
-        <div class="form-group">
-          <label for="paste-area">paste area</label>
-          <textarea class="form-control" id="paste-area"></textarea>
+      <div class="row" role="form">
+        <div class="col-md-8">
+          <div class="form-group">
+            <label for="paste-area">paste area</label>
+            <textarea class="form-control" id="paste-area" rows="18"></textarea>
+          </div>
+          <input type="button" class="btn btn-default" id="paste-submit" value="submit" />
         </div>
-        <input type="button" class="btn btn-default" id="paste-submit" value="submit" />
-        <div class="form-group">
-          <label for="paste-response">response</label>
-          <textarea class="form-control" id="paste-response" readonly></textarea>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="paste-response">response</label>
+            <textarea class="form-control" id="paste-response" rows="20" readonly></textarea>
+          </div>
         </div>
       </div>
       <hr>
